Numberの派生クラスのnewが非推奨になったのをvalueOfに変更